infrastructure/platform/cicd/pact-broker/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: payu-cicd
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/version: "16"
    team: platform
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pact-broker
  namespace: payu-cicd
  labels:
    app.kubernetes.io/name: pact-broker
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/version: "2.112.0"
    team: platform
spec:
  selector:
    app.kubernetes.io/name: pact-broker
  ports:
    - port: 80
      targetPort: 9292
      name: http
  type: ClusterIP
